# game_project

./: CMakeLists.txt  README.md  vcpkg.json
include/: Enemy.h  Game.h  InputManager.h  Player.h  Projectile.h  Renderer.h  Vector2.h  Weapon.h  World.h
include/enemies/: Animal.h
include/player/: BodyPart.h  Health.h  StickFigureBody.h
include/weapons/: Bullet.h  Gun.h  Hammer.h
include/world/: AnimalWorld.h  DemonWorld.h  HumanWorld.h  InsectWorld.h
src/: Enemy.cpp  Game.cpp  InputManager.cpp  Player.cpp  Projectile.cpp  Renderer.cpp  Weapon.cpp  World.cpp  main.cpp
src/enemies/: Animal.cpp
src/player/: BodyPart.cpp  Health.cpp  StickFigureBody.cpp
src/weapons/: Bullet.cpp  Gun.cpp  Hammer.cpp
src/world/: AnimalWorld.cpp  DemonWorld.cpp  HumanWorld.cpp  InsectWorld.cpp
